# AnimeDex

./: .gitignore  .replit  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  PostCreator.py  README.md  SECURITY.md  app.json  app.py  cache_purge_jsdeliver.py  config.py  heroku.yml  index.py  main.py  minify.py  pyproject.toml  requirements.txt  runtime.txt  tempCodeRunnerFile.py  vercel.json  wsgi.py
.github/workflows/: semgrep.yml
programs/: anilist.py  anime_loader.py  cache.py  db.py  gogo.py  gogoScrapper.py  html_gen.py  others.py  techzapi.py  vidstream.py
run/: wsgi.py
static/: robots.txt  temp.js  video.js
static/css/: anime.css  anime_min_min.css  episode.css  episode_min_min_min.css  home.css  home_min_min.css  search.css  search_min_min.css  video.css
static/js/: home.js  player.js
templates/: a.html  anime.html  anime.min.html  anime_min_min.html  embed.html  embed_min.html  episode.html  episode.min.html  episode_min.html  home.html  home.min.html  home_min.html  home_min_min.html  home_min_min_min.html  plyr.html  search.html  search.min.html  search_min.html  vid.html  vid.min.html  vid_min.html
utils/: anilist.py  anime_loader.py  db.py  html_gen.py  others.py  techzapi.py
