[tool.poetry]
name = "repl_nix_AnimeDex"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
yarl = "^1.8.1"
bs4 = "^0.0.1"
Flask = "^2.2.2"
pycryptodomex = "^3.15.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"